<resources>
    <string name="app_name" translatable="false">Sounge</string>
    <string name="banner_content_description">Imagem de fundo de perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_button">Editar</string>
    <string name="posts">Posts</string>
    <string name="talents">Talentos</string>
    <string name="band">Banda</string>
    <string name="not_in_band">Nenhuma banda para mostrar</string>
    <string name="error_unliking">Erro ao retirar reação</string>
    <string name="error_liking">Erro ao reagir ao post</string>
    <string name="syntonize">Sintonizar</string>
    <string name="delete">Deletar</string>
    <string name="edit">Editar</string>
    <string name="save">Salvar</string>
    <string name="permission_error">Não foi possível continuar, permissão necessária</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="password">Senha</string>
    <string name="cancel">Cancelar</string>
    <string name="enter">Entrar</string>
    <string name="email">E-mail</string>
    <string name="integrantes">Integrantes da Banda</string>
    <string name="perfil">Vamos escolher seu tipo de perfil</string>
    <string name="tipo_perfil">Tipo de perfil...</string>
    <string name="finalizar">Finalizar</string>
    <string name="come_back">Voltar</string>
    <string name="all_ready_one">Tudo Pronto!</string>
    <string name="start_search">Começar a procurar!</string>
    <string name="login_error">Email ou senha incorretos</string>
    <string name="login_sucess">Bem Vindo!</string>
    <string name="cadastre_se">Clique aqui e Cadastre-se!</string>

    <string name="my_talents">Meus Talentos</string>
    <string name="other_talents">Outros Talentos</string>
    <string name="post_hint0">Fale sobre sua música…</string>
    <string name="post_hint1">Compartilhe seus momentos…</string>
    <string name="post_hint2">Solte sua voz!</string>
    <string name="profile_not_found">Perfil não encontrado</string>
    <string name="profile_error">Erro ao buscar perfil</string>
    <string name="nothing_here">Ainda não há nada por aqui</string>
    <string name="saving_error">Erro ao salvar alterações</string>
    <string name="posting_eror">Erro ao criar post</string>
    <string name="commenting_error">Erro ao criar comentário</string>
    <string name="get_comments_error">Erro ao buscar comentários</string>
    <string name="like_comment_error">Erro ao reagir ao comentário</string>
    <string name="unlike_error">Erro ao remover reação</string>
    <string name="like_post_error">Erro ao reagir ao post</string>
    <string name="post_error">Erro ao buscar posts</string>
    <string name="about">Sobre</string>
    <string name="musical_interests">Interesses Musicais</string>
    <string name="loading_error">Erro ao carregar</string>
    <string name="my_musical_interests">Meus Interesses Musicais</string>
    <string name="other_musical_interests">Outros Interesses Musicais</string>
    <string name="ask_before_delete_post">Deseja mesmo deletar este post?</string>
    <string name="ask_before_delete_comment">Deseja mesmo deletar este comentário?</string>
    <string name="delete_post">Deletar post?</string>
    <string name="delete_comment">Deletar comentário?</string>
    <string name="successfully_deleted_post">Post deletado com sucesso</string>
    <string name="successfully_deleted_comment">Comentário deletado com sucesso</string>
    <string name="error_deleting_post">Erro ao deletar post</string>
    <string name="error_deleting_comment">Erro ao deletar comentário</string>
    <string name="text">Texto</string>
    <string name="group">Grupo</string>
    <string name="search_people">Pesquisar pessoas...</string>
</resources>