<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".actitivy.LoginActivity"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_sounge_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:src="@drawable/image_sounge_basico_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/entrarText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/enter"
            android:textSize="15sp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/logo_sounge_horizontal"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:layout_margin="20dp"
            app:boxStrokeColor="@color/dark_gray"
            app:boxBackgroundColor="@color/black"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/entrarText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inserirEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:layout_margin="20dp"
            app:boxStrokeColor="@color/dark_gray"
            app:boxBackgroundColor="@color/black"
            android:enabled="true"
            app:endIconTint="@color/white"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inserirSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/esqueciSenha"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Esqueci minha senha"
            android:textSize="15sp"
            android:textColor="@color/light_gray"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/senha"/>

        <TextView
            android:id="@+id/mensagemDeErro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/esqueciSenha"
            tools:text="@string/login_error" />

        <Button
            android:id="@+id/entrarButon"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:backgroundTint="@color/main_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mensagemDeErro"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
